--- a/tree/experimental/test/CMakeLists.txt
+++ b/tree/experimental/test/CMakeLists.txt
@@ -17,8 +17,10 @@ endif()
 if (sycl OR cuda)
     ROOT_ADD_GTEST(HistoFill histoFill.cxx LIBRARIES ${testLibs} Hist)
     ROOT_ADD_GTEST(HistoRDF histoRDF.cxx LIBRARIES ${testLibs})
+    ROOT_ADD_GTEST(DefHistoFill DefHistoFill.cxx LIBRARIES ${testLibs})
 endif()
 
 if(sycl)
  target_compile_definitions(HistoRDF PUBLIC ROOT_RDF_SYCL)
+ target_compile_definitions(DefHistoFill PUBLIC ROOT_RDF_SYCL)
 endif()
