--- a/tree/experimental/test/CMakeLists.txt
+++ b/tree/experimental/test/CMakeLists.txt
@@ -11,16 +11,18 @@ if (cuda)
 endif()
 
 if (sycl)
-    list(APPEND testLibs SYCLHist)
+    list(APPEND testLibs SYCLHist GenVectorSYCL)
 endif()
 
 if (sycl OR cuda)
     ROOT_ADD_GTEST(HistoFill histoFill.cxx LIBRARIES ${testLibs} Hist)
     ROOT_ADD_GTEST(HistoRDF histoRDF.cxx LIBRARIES ${testLibs})
     ROOT_ADD_GTEST(DefHistoFill DefHistoFill.cxx LIBRARIES ${testLibs})
+    ROOT_ADD_GTEST(InvariantMassesHistoFill InvariantMassesHistoFill.cxx LIBRARIES ${testLibs})
 endif()
 
 if(sycl)
- target_compile_definitions(HistoRDF PUBLIC ROOT_RDF_SYCL)
- target_compile_definitions(DefHistoFill PUBLIC ROOT_RDF_SYCL)
+ target_compile_definitions(HistoRDF PUBLIC ROOT_RDF_SYCL ROOT_MATH_SYCL)
+ target_compile_definitions(DefHistoFill PUBLIC ROOT_RDF_SYCL ROOT_MATH_SYCL)
+ target_compile_definitions(InvariantMassesHistoFill PUBLIC ROOT_RDF_SYCL ROOT_MATH_SYCL)
 endif()
