--- a/tree/experimental/test/CMakeLists.txt
+++ b/tree/experimental/test/CMakeLists.txt
@@ -19,10 +19,11 @@ if (sycl OR cuda)
     ROOT_ADD_GTEST(HistoRDF histoRDF.cxx LIBRARIES ${testLibs})
     ROOT_ADD_GTEST(DefHistoFill DefHistoFill.cxx LIBRARIES ${testLibs})
     ROOT_ADD_GTEST(InvariantMassesHistoFill InvariantMassesHistoFill.cxx LIBRARIES ${testLibs})
+    ROOT_ADD_GTEST(Def Def.cxx LIBRARIES ${testLibs})
 endif()
 
 if(sycl)
  target_compile_definitions(HistoRDF PUBLIC ROOT_RDF_SYCL ROOT_MATH_SYCL)
  target_compile_definitions(DefHistoFill PUBLIC ROOT_RDF_SYCL ROOT_MATH_SYCL)
- target_compile_definitions(InvariantMassesHistoFill PUBLIC ROOT_RDF_SYCL ROOT_MATH_SYCL)
+ target_compile_definitions(Def PUBLIC ROOT_RDF_SYCL ROOT_MATH_SYCL)
 endif()
