Add `DefineSYCL` interface

--- a/tree/experimental/test/CMakeLists.txt
+++ b/tree/experimental/test/CMakeLists.txt
@@ -20,10 +20,12 @@ if (sycl OR cuda)
     ROOT_ADD_GTEST(DefHistoFill DefHistoFill.cxx LIBRARIES ${testLibs})
     ROOT_ADD_GTEST(InvariantMassesHistoFill InvariantMassesHistoFill.cxx LIBRARIES ${testLibs})
     ROOT_ADD_GTEST(Def Def.cxx LIBRARIES ${testLibs})
+    ROOT_ADD_GTEST(DefRDF DefRDF.cxx LIBRARIES ${testLibs})
 endif()
 
 if(sycl)
  target_compile_definitions(HistoRDF PUBLIC ROOT_RDF_SYCL ROOT_MATH_SYCL)
  target_compile_definitions(DefHistoFill PUBLIC ROOT_RDF_SYCL ROOT_MATH_SYCL)
  target_compile_definitions(Def PUBLIC ROOT_RDF_SYCL ROOT_MATH_SYCL)
+ target_compile_definitions(DefRDF PUBLIC ROOT_RDF_SYCL ROOT_MATH_SYCL)
 endif()
